# ctetris

./: .gitignore  CMakeLists.txt  README.org
assets/: pixel_at_time.aseprite  pixel_at_time.json  tetrominos.aseprite  tetronimo_I.aseprite
src/: cmake_variables.h.in  game.c  game.h  impl.c  main.c  main.old
src/old/: game.c  game.h
test/: test_game.c
